[gd_scene load_steps=15 format=3 uid="uid://be2twwdyeduvb"]

[ext_resource type="Texture2D" uid="uid://bpiomleg6q6cq" path="res://assets/IsoTileMap.png" id="1_28q0j"]
[ext_resource type="Script" path="res://GameService.gd" id="1_he3ci"]
[ext_resource type="Script" path="res://TurnService.gd" id="2_eknaf"]
[ext_resource type="Script" path="res://TacticsTileMap.gd" id="3_oa8ik"]
[ext_resource type="Script" path="res://AstarService.gd" id="4_krdri"]
[ext_resource type="Script" path="res://Pawn.gd" id="5_uy2mm"]
[ext_resource type="Script" path="res://PlayerController.gd" id="6_e71m8"]
[ext_resource type="Script" path="res://NavService.gd" id="6_ywr2q"]
[ext_resource type="PackedScene" uid="uid://c8uqmrl2y1tnd" path="res://player.tscn" id="7_4cdsd"]
[ext_resource type="Texture2D" uid="uid://cxaqvc8efeugn" path="res://assets/ProtagBiggIdle.png" id="9_6jath"]
[ext_resource type="Texture2D" uid="uid://c86pymncn7od5" path="res://assets/ProtagFastIdle.png" id="10_d3e1d"]
[ext_resource type="Texture2D" uid="uid://c8em6lxls3rs8" path="res://assets/ProtagHelpIdle.png" id="12_23s2i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6kye6"]
texture = ExtResource("1_28q0j")
0:0/size_in_atlas = Vector2i(4, 4)
0:0/0 = 0
0:0/0/custom_data_0 = true
4:0/size_in_atlas = Vector2i(4, 4)
4:0/0 = 0
0:4/size_in_atlas = Vector2i(4, 4)
0:4/0 = 0
4:4/size_in_atlas = Vector2i(4, 4)
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_eo1nr"]
tile_shape = 1
tile_size = Vector2i(64, 32)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_6kye6")

[node name="GameService" type="Node2D"]
script = ExtResource("1_he3ci")

[node name="TurnService" type="Node2D" parent="."]
script = ExtResource("2_eknaf")

[node name="NavService" type="Node2D" parent="."]
script = ExtResource("6_ywr2q")

[node name="AstarService" type="Node2D" parent="NavService"]
script = ExtResource("4_krdri")

[node name="Map" type="TileMap" parent="NavService"]
y_sort_enabled = true
tile_set = SubResource("TileSet_eo1nr")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-1, 0, 0, 0, 0, 0, 65536, 0, 0, 131073, 0, 0, 196609, 0, 0, 262146, 0, 0, 327682, 0, 0, 393219, 0, 0, 327683, 0, 0, 262147, 0, 0, 196611, 0, 0, 131076, 0, 0, 65540, 0, 0, 196612, 0, 0, 262148, 0, 0, 393220, 0, 0, 327684, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589828, 0, 0, 655364, 0, 0, 720899, 0, 0, 655363, 0, 0, 589827, 0, 0, 524291, 0, 0, 458755, 0, 0, 458756, 0, 0, -131069, 0, 0, -196606, 0, 0, -131070, 0, 0, -65535, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 131075, 0, 0, 65539, 0, 0, 3, 0, 0, 196610, 0, 0, 524292, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589825, 0, 0, 655362, 0, 0, 720897, 0, 0, 786434, 0, 0, 720898, 0, 0, 458753, 0, 0, 524289, 0, 0, 655361, 0, 0, 589826, 0, 0, 262149, 0, 0, 327685, 0, 0, 262150, 0, 0, 196614, 0, 0, 131078, 0, 0, 131079, 0, 0, 65542, 0, 0, 7, 0, 0, -65529, 0, 0, -131064, 0, 0, -65528, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393226, 0, 0, 458761, 0, 0, 524298, 0, 0, 589833, 0, 0, 655370, 0, 0, 720905, 0, 0, 786442, 0, 0, 851977, 0, 0, 917513, 0, 0, 983049, 0, 0, 786441, 0, 0, 655369, 0, 0, 524297, 0, 0, 458760, 0, 0, 393225, 0, 0, 327688, 0, 0, 393224, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1114115, 0, 0, 1179652, 0, 0, 1245187, 0, 0, 1310723, 0, 0, 1376258, 0, 0, 1376257, 0, 0, 1310721, 0, 0, 1245184, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1179650, 0, 0, 1245186, 0, 0, 1179651, 0, 0, 1114114, 0, 0, 1310722, 0, 0, 196616, 0, 0, 65544, 0, 0, 8, 0, 0, 131072, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524286, 0, 0, 589822, 0, 0, 655358, 0, 0, 589823, 0, 0, 524287, 0, 0, 393214, 0, 0, 458750, 0, 0, 720895, 0, 0, 655359, 0, 0, 786431, 0, 0, 851967, 0, 0, -196603, 0, 0, -262139, 0, 0, -131067, 0, 0, -65531, 0, 0, -131066, 0, 0, -262138, 0, 0)
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array()
script = ExtResource("3_oa8ik")

[node name="LogicalMap" type="Node" parent="NavService"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(277, 91)

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("6_e71m8")

[node name="Player" parent="PlayerController" instance=ExtResource("7_4cdsd")]
texture = ExtResource("9_6jath")
hframes = 5
vframes = 2

[node name="Player2" type="Sprite2D" parent="PlayerController"]
position = Vector2(158, 15)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_d3e1d")
offset = Vector2(0, -30)
hframes = 5
vframes = 2
script = ExtResource("5_uy2mm")
initiative = 5.0

[node name="Player3" type="Sprite2D" parent="PlayerController"]
position = Vector2(158, 141)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_23s2i")
offset = Vector2(0, -30)
hframes = 5
vframes = 2
script = ExtResource("5_uy2mm")
initiative = 1.0

[node name="Player4" type="Sprite2D" parent="PlayerController"]
position = Vector2(-30, 81)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_6jath")
offset = Vector2(0, -30)
hframes = 5
vframes = 2
script = ExtResource("5_uy2mm")
initiative = 2.0

[node name="DebugLabel" type="Label" parent="."]
offset_left = -96.0
offset_top = -67.0
offset_right = -56.0
offset_bottom = -44.0

[connection signal="start_new_turn" from="TurnService" to="." method="_on_turn_service_start_new_turn"]
